# mov-watch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: publish-pypi.yml
assets/: movie-watch.desktop
aur/: .SRCINFO  PKGBUILD
mov_watch/: __main__.py  api.py  app.py  cli.py  config.py  history.py  models.py  monitoring.py  player.py  settings.py  ui.py  updater.py  version.py
scripts/: MANIFEST.in  build.bat  build.py  setup.py
src/: __main__.py  api.py  app.py  cli.py  deps.py  discord_rpc.py  favorites.py  models.py  player.py  ui.py  updater.py  version.py
